# grpc_simpleble

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: list_adapters.py  scan.py
proto/: simplegrpcble.proto
server/: main.cpp
src/python/simplegrpcble/: __init__.py  classes.py  client.py
